--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ img {
   padding: 0.5rem;
   cursor: pointer;
   width: 45%;
-  font-size: x-large;
+  font-size: 20px;
   border-radius: 20px;
   border: #fff solid 2px;
   margin: 5px;
