--- a/style.css
+++ b/style.css
@@ -59,3 +59,9 @@ img {
 .btn:focus {
   outline: none;
 }
+body{
+  background-image: url(https://drive.google.com/file/d/1sGV1HCLPgGyUD00cLmAPlQPbRRRFEupx/view?usp=sharing);
+z);
+
+}
+
