--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
-
+@import url("https://drive.google.com/file/d/1sGV1HCLPgGyUD00cLmAPlQPbRRRFEupx/view?usp=sharing")
 * {
   box-sizing: border-box;
 }
